// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders Tooltip aligned left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-left memori-tooltip--visible"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content by default as I am controlled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--visible"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content by default as I am controlled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned top left unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-topLeft memori-tooltip--visible"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content by default as I am controlled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip aligned top right unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-topRight memori-tooltip--visible"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content by default as I am controlled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip disabled unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--disabled"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content but I am disabled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip visible unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right memori-tooltip--visible"
  >
    <div
      class="memori-tooltip--content"
    >
      Here is some tooltip content by default as I am controlled
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;

exports[`renders Tooltip with jsx content unchanged 1`] = `
<div>
  <div
    class="memori-tooltip memori-tooltip--align-right"
  >
    <div
      class="memori-tooltip--content"
    >
      <p>
        Here we have some JSX, useful for
        <a
          href="https://memori.ai"
          rel="noopener noreferrer"
          target="_blank"
        >
          links
        </a>
        , for example.
      </p>
    </div>
    <div
      class="memori-tooltip--trigger"
    >
      Hover me
    </div>
  </div>
</div>
`;
